src/objects/Wait_List_Income_Limit_Details__c.object
<CustomObject>
    <fields>
        <fullName>FMR__c</fullName>
        <label>FMR</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Limit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Limit</label>
        <referenceTo>Wait_List_Income_Limit__c</referenceTo>
        <relationshipLabel>Wait List Income Limit Details</relationshipLabel>
        <relationshipName>Wait_List_Income_Limit_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limit_10__c</fullName>
        <label>Limit 10</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_11__c</fullName>
        <label>Limit 11</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_12__c</fullName>
        <label>Limit 12</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Effective_Date__c</fullName>
        <label>Limit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Limit_Expiration_Date__c</fullName>
        <label>Limit Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Median_Income__c</fullName>
        <label>Median Income</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <label>Wait List Income Limit Details</label>
    <listViews>
        <fullName>All_Income_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Income_Limit__c</columns>
        <columns>Limit_1__c</columns>
        <columns>Limit_2__c</columns>
        <columns>Limit_3__c</columns>
        <columns>Limit_4__c</columns>
        <columns>Limit_5__c</columns>
        <columns>Limit_6__c</columns>
        <columns>Limit_7__c</columns>
        <columns>Limit_8__c</columns>
        <columns>Limit_9__c</columns>
        <columns>NAME</columns>
        <columns>FMR__c</columns>
        <columns>Limit_Effective_Date__c</columns>
        <columns>Limit_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Income View</label>
    </listViews>
    <nameField>
        <label>HMY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wait List Income Limit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>